# model/mysql/table.go
@@ -1,54 +1,59 @@
 package mysql
 
-import (
-	"time"
-)
+import "time"
 
 const (
-	TableSkuInventory    = "sku_inventory"
-	TableSkuProperty     = "sku_property"
-	TableSkuPriceHistory = "sku_price_history"
+	TableAccount     = "account"
+	TablePayRecord   = "pay_record"
+	TableTransaction = "transaction"
 )
 
-type SkuPriceHistory struct {
-	Id         int64     `xorm:"'id' pk autoincr comment('自增ID') BIGINT"`
-	ShopId     int64     `xorm:"'shop_id' not null comment('调价的店铺id') unique(shop_id_sku_code_index) BIGINT"`
-	SkuCode    string    `xorm:"'sku_code' not null comment('商品sku_code') unique(shop_id_sku_code_index) index CHAR(40)"`
-	Price      string    `xorm:"'price' not null comment('商品价格') DECIMAL(32,16)"`
-	Tsp        int       `xorm:"'tsp' not null comment('价格变化时的时间戳') index INT"`
-	Reason     string    `xorm:"'reason' comment('调价说明') TEXT"`
-	CreateTime time.Time `xorm:"'create_time' not null default CURRENT_TIMESTAMP comment('创建时间') DATETIME"`
-	UpdateTime time.Time `xorm:"'update_time' not null default CURRENT_TIMESTAMP comment('更新时间') DATETIME"`
-	OpUid      int64     `xorm:"'op_uid' comment('操作员UID') BIGINT"`
-	OpIp       string    `xorm:"'op_ip' comment('操作员IP') CHAR(16)"`
+type Account struct {
+	AccountCode string    `xorm:"not null pk comment('账户主键') CHAR(50)"`
+	Owner       string    `xorm:"not null comment('账户所有者') unique(account_index) CHAR(36)"`
+	Balance     string    `xorm:"comment('账户余额') DECIMAL(32,16)"`
+	CoinType    int       `xorm:"not null default 1 comment('币种类型，1-rmb，2-usdt') unique(account_index) TINYINT"`
+	CoinDesc    string    `xorm:"comment('币种描述') VARCHAR(64)"`
+	State       int       `xorm:"comment('状态，1无效，2锁定，3正常') TINYINT"`
+	AccountType int       `xorm:"not null comment('账户类型，1-个人账户，2-公司账户，3-系统账户') unique(account_index) TINYINT"`
+	CreateTime  time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('创建时间') index DATETIME"`
+	UpdateTime  time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('更新时间') DATETIME"`
 }
 
-type SkuInventory struct {
-	Id         int64     `xorm:"'id' pk autoincr comment('商品库存ID') BIGINT"`
-	SkuCode    string    `xorm:"'sku_code' not null comment('商品编码') unique unique(sku_code_shop_id_index) CHAR(64)"`
-	Amount     int64     `xorm:"'amount' comment('库存数量') BIGINT"`
-	Price      string    `xorm:"'price' comment('入库单价') DECIMAL(32,16)"`
-	ShopId     int64     `xorm:"'shop_id' not null comment('所属店铺ID') index unique(sku_code_shop_id_index) BIGINT"`
-	CreateTime time.Time `xorm:"'create_time' not null default CURRENT_TIMESTAMP comment('创建时间') DATETIME"`
-	UpdateTime time.Time `xorm:"'update_time' not null default CURRENT_TIMESTAMP comment('修改时间') DATETIME"`
+type PayRecord struct {
+	Id          int64     `xorm:"pk autoincr comment('自增ID') BIGINT"`
+	TxId        string    `xorm:"not null comment('批次交易号') index CHAR(40)"`
+	OutTradeNo  string    `xorm:"not null comment('外部商户订单号') index CHAR(40)"`
+	TimeExpire  time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('支付过期时间') DATETIME"`
+	NotifyUrl   string    `xorm:"comment('交易结果通知地址') VARCHAR(255)"`
+	Description string    `xorm:"comment('交易描述') VARCHAR(255)"`
+	Merchant    string    `xorm:"not null comment('交易商户ID') index CHAR(40)"`
+	Attach      string    `xorm:"comment('交易留言') TEXT"`
+	User        string    `xorm:"not null comment('交易用户ID') index CHAR(40)"`
+	Amount      string    `xorm:"not null comment('交易数量') DECIMAL(32,16)"`
+	CoinType    int       `xorm:"not null default 0 comment('交易币种，0-cny,1-usd') TINYINT"`
+	Reduction   string    `xorm:"comment('满减优惠') DECIMAL(32,16)"`
+	PayType     int       `xorm:"not null comment('交易类型，1入账，2退款') TINYINT"`
+	PayState    int       `xorm:"comment('支付状态，0-未支付，1-支付中，2-支付失败，3-支付成功') TINYINT"`
+	CreateTime  time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('创建时间') DATETIME"`
+	UpdateTime  time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('修改时间') DATETIME"`
 }
 
-type SkuProperty struct {
-	Id            int64     `xorm:"'id' pk autoincr comment('ID') BIGINT"`
-	Code          string    `xorm:"'code' not null comment('商品唯一编号') index CHAR(64)"`
-	Price         string    `xorm:"'price' comment('商品当前价格') DECIMAL(10,2)"`
-	Name          string    `xorm:"'name' comment('商品名称') index VARCHAR(255)"`
-	Desc          string    `xorm:"'desc' comment('商品描述') TEXT"`
-	Production    string    `xorm:"'production' comment('生产企业') VARCHAR(1024)"`
-	Supplier      string    `xorm:"'supplier' comment('供应商') VARCHAR(1024)"`
-	Category      int       `xorm:"'category' comment('商品类别') INT"`
-	Title         string    `xorm:"'title' comment('商品标题') VARCHAR(255)"`
-	SubTitle      string    `xorm:"'sub_title' comment('商品副标题') VARCHAR(255)"`
-	Color         string    `xorm:"'color' comment('商品颜色') VARCHAR(64)"`
-	ColorCode     int       `xorm:"'color_code' comment('商品颜色代码') INT"`
-	Specification string    `xorm:"'specification' comment('商品规格') VARCHAR(255)"`
-	DescLink      string    `xorm:"'desc_link' comment('商品介绍链接') VARCHAR(255)"`
-	State         int       `xorm:"'state' default 0 comment('商品状态，0-有效，1-无效，2-锁定') TINYINT"`
-	CreateTime    time.Time `xorm:"'create_time' not null comment('创建时间') DATETIME"`
-	UpdateTime    time.Time `xorm:"'update_time' not null comment('更新时间') DATETIME"`
+type Transaction struct {
+	Id              int64     `xorm:"pk comment('交易ID') BIGINT"`
+	FromAccountCode string    `xorm:"not null default '0' comment('转出账户ID') CHAR(36)"`
+	FromBalance     string    `xorm:"default 0.0000000000000000 comment('转出后账户余额') DECIMAL(32,16)"`
+	ToAccountCode   string    `xorm:"not null default '0' comment('转入账户ID') CHAR(36)"`
+	ToBalance       string    `xorm:"comment('转入后账户余额') DECIMAL(32,16)"`
+	Amount          string    `xorm:"comment('交易金额') DECIMAL(32,16)"`
+	Meta            string    `xorm:"comment('转账说明') VARCHAR(255)"`
+	Scene           string    `xorm:"comment('支付场景') VARCHAR(64)"`
+	OpUid           int64     `xorm:"not null comment('操作用户UID') BIGINT"`
+	OpIp            string    `xorm:"comment('操作的IP') VARCHAR(16)"`
+	TxId            string    `xorm:"comment('对应交易号') CHAR(36)"`
+	Fingerprint     string    `xorm:"not null comment('防篡改指纹') VARCHAR(32)"`
+	PayType         int       `xorm:"default 0 comment('支付方式，0系统操作，1-银行卡，2-信用卡,3-支付宝,4-微信支付,5-京东支付') TINYINT"`
+	PayDesc         string    `xorm:"comment('支付方式描述') VARCHAR(36)"`
+	CreateTime      time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('创建时间') DATETIME"`
+	UpdateTime      time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('修改时间') DATETIME"`
 }
