# models.go
@@ -16,6 +16,18 @@ type Account struct {
 	UpdateTime  time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('更新时间') DATETIME"`
 }
 
+type ConfigKvStore struct {
+	Id          int       `xorm:"not null pk autoincr comment('主键') INT"`
+	ConfigKey   string    `xorm:"not null comment('配置键') unique VARCHAR(255)"`
+	ConfigValue string    `xorm:"not null comment('配置值') VARCHAR(255)"`
+	Prefix      string    `xorm:"not null comment('配置前缀') VARCHAR(255)"`
+	Suffix      string    `xorm:"not null comment('配置后缀') VARCHAR(255)"`
+	Status      int       `xorm:"not null default 1 comment('是否启用 1是 0否') TINYINT"`
+	IsDelete    int       `xorm:"not null default 0 comment('是否删除 1是 0否') TINYINT"`
+	CreateTime  time.Time `xorm:"default CURRENT_TIMESTAMP comment('创建时间') DATETIME"`
+	UpdateTime  time.Time `xorm:"default CURRENT_TIMESTAMP comment('更新时间') DATETIME"`
+}
+
 type Merchant struct {
 	MerchantId   int64     `xorm:"not null pk autoincr comment('商户号ID') BIGINT"`
 	MerchantCode string    `xorm:"not null comment('商户唯一code') index CHAR(36)"`
@@ -27,6 +39,60 @@ type Merchant struct {
 	TaxCardNo    string    `xorm:"comment('纳税账户号') CHAR(30)"`
 	CreateTime   time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('创建时间') DATETIME"`
 	UpdateTime   time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('修改时间') DATETIME"`
+}
+
+type Order struct {
+	Id           int64     `xorm:"pk autoincr comment('自增ID') BIGINT"`
+	TxCode       string    `xorm:"not null comment('交易号') unique(tx_code_order_code_index) CHAR(40)"`
+	OrderCode    string    `xorm:"not null comment('订单code') unique unique(tx_code_order_code_index) CHAR(40)"`
+	Uid          int64     `xorm:"not null comment('用户UID') index BIGINT"`
+	OrderTime    time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('下单时间') index DATETIME"`
+	Description  string    `xorm:"comment('订单描述') index VARCHAR(255)"`
+	ClientIp     string    `xorm:"comment('客户端IP') CHAR(16)"`
+	DeviceCode   string    `xorm:"comment('客户端设备code') VARCHAR(512)"`
+	ShopId       int64     `xorm:"not null comment('门店ID') index BIGINT"`
+	ShopName     string    `xorm:"not null comment('门店名称') index VARCHAR(255)"`
+	ShopAreaCode string    `xorm:"comment('门店区域编号') VARCHAR(255)"`
+	ShopAddress  string    `xorm:"comment('门店地址') TEXT"`
+	State        int       `xorm:"not null default 0 comment('订单状态，0-有效，1-锁定中，2-无效') TINYINT"`
+	PayExpire    time.Time `xorm:"not null comment('支付有效期，默认30分钟内有效') DATETIME"`
+	PayState     int       `xorm:"not null default 0 comment('支付状态，0-未支付，1-支付中，2-支付失败，3-已支付') TINYINT"`
+	Amount       int       `xorm:"comment('订单关联商品数量') INT"`
+	TotalAmount  string    `xorm:"not null default 0.0000000000000000 comment('订单总金额') DECIMAL(32,16)"`
+	CoinType     int       `xorm:"default 1 comment(' 订单币种，1-CNY，2-USD') TINYINT"`
+	CreateTime   time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('创建时间') DATETIME"`
+	UpdateTime   time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('修改时间') DATETIME"`
+}
+
+type OrderSku struct {
+	Id         int64     `xorm:"pk autoincr comment('自增ID') BIGINT"`
+	OrderCode  string    `xorm:"not null comment('对应订单code') unique(order_unique) CHAR(64)"`
+	ShopId     int64     `xorm:"not null comment('店铺ID') unique(order_unique) index BIGINT"`
+	SkuCode    string    `xorm:"not null comment('商品sku') unique(order_unique) index CHAR(64)"`
+	Price      string    `xorm:"not null default 0.0000000000000000 comment('商品单价') DECIMAL(32,16)"`
+	Amount     int       `xorm:"not null comment('商品数量') INT"`
+	Name       string    `xorm:"comment('商品名称') index VARCHAR(255)"`
+	CreateTime time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('创建时间') DATETIME"`
+	UpdateTime time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('修改时间') DATETIME"`
+}
+
+type PayRecord struct {
+	Id          int64     `xorm:"pk autoincr comment('自增ID') BIGINT"`
+	TxId        string    `xorm:"not null comment('批次交易号') index CHAR(40)"`
+	OutTradeNo  string    `xorm:"not null comment('外部商户订单号') index CHAR(40)"`
+	TimeExpire  time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('支付过期时间') DATETIME"`
+	NotifyUrl   string    `xorm:"comment('交易结果通知地址') VARCHAR(255)"`
+	Description string    `xorm:"comment('交易描述') VARCHAR(255)"`
+	Merchant    string    `xorm:"not null comment('交易商户ID') index CHAR(40)"`
+	Attach      string    `xorm:"comment('交易留言') TEXT"`
+	User        string    `xorm:"not null comment('交易用户ID') index CHAR(40)"`
+	Amount      string    `xorm:"not null comment('交易数量') DECIMAL(32,16)"`
+	CoinType    int       `xorm:"not null default 0 comment('交易币种，0-cny,1-usd') TINYINT"`
+	Reduction   string    `xorm:"comment('满减优惠') DECIMAL(32,16)"`
+	PayType     int       `xorm:"not null comment('交易类型，1入账，2退款') TINYINT"`
+	PayState    int       `xorm:"comment('支付状态，0-未支付，1-支付中，2-支付失败，3-支付成功') TINYINT"`
+	CreateTime  time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('创建时间') DATETIME"`
+	UpdateTime  time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('修改时间') DATETIME"`
 }
 
 type ShopBusiness struct {
@@ -91,7 +157,7 @@ type SkuProperty struct {
 }
 
 type Transaction struct {
-	Id              int64     `xorm:"pk comment('交易ID') BIGINT"`
+	Id              int64     `xorm:"pk autoincr comment('交易ID') BIGINT"`
 	FromAccountCode string    `xorm:"not null default '0' comment('转出账户ID') CHAR(36)"`
 	FromBalance     string    `xorm:"default 0.0000000000000000 comment('转出后账户余额') DECIMAL(32,16)"`
 	ToAccountCode   string    `xorm:"not null default '0' comment('转入账户ID') CHAR(36)"`
@@ -102,7 +168,7 @@ type Transaction struct {
 	OpUid           int64     `xorm:"not null comment('操作用户UID') BIGINT"`
 	OpIp            string    `xorm:"comment('操作的IP') VARCHAR(16)"`
 	TxId            string    `xorm:"comment('对应交易号') CHAR(36)"`
-	Fingerprint     string    `xorm:"not null comment('防篡改指纹') VARCHAR(32)"`
+	Fingerprint     string    `xorm:"not null comment('防篡改指纹') TEXT"`
 	PayType         int       `xorm:"default 0 comment('支付方式，0系统操作，1-银行卡，2-信用卡,3-支付宝,4-微信支付,5-京东支付') TINYINT"`
 	PayDesc         string    `xorm:"comment('支付方式描述') VARCHAR(36)"`
 	CreateTime      time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('创建时间') DATETIME"`
@@ -127,6 +193,19 @@ type User struct {
 	UpdateTime   time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('修改时间') DATETIME"`
 	ContactAddr  string    `xorm:"comment('联系地址') TEXT"`
 	Age          int       `xorm:"comment('年龄') INT"`
+}
+
+type UserTrolley struct {
+	Id         int64     `xorm:"pk autoincr comment('自增ID') BIGINT"`
+	Uid        int64     `xorm:"not null comment('用户ID') index(shop_id_sku_uid_index) BIGINT"`
+	ShopId     int64     `xorm:"not null comment('店铺ID') index(shop_id_sku_index) index(shop_id_sku_uid_index) BIGINT"`
+	SkuCode    string    `xorm:"not null comment('商品sku') index(shop_id_sku_index) index(shop_id_sku_uid_index) index CHAR(40)"`
+	Count      int       `xorm:"not null default 1 comment('商品数量') INT"`
+	JoinTime   time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('加入时间') DATETIME"`
+	Selected   int       `xorm:"default 1 comment('是否选中，1-未选中，2-选中') TINYINT(1)"`
+	State      int       `xorm:"default 1 comment('状态，1-有效，2-移除') TINYINT"`
+	CreateTime time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('创建时间') DATETIME"`
+	UpdateTime time.Time `xorm:"not null default CURRENT_TIMESTAMP comment('更新时间') DATETIME"`
 }
 
 type VerifyCodeRecord struct {
